banner about page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1031,7 +1031,7 @@ ul{
   width: 100%;
   height: calc(100vh - 160px);
   position: relative;
-  top:-15px;
+  top:0;
   display: flex;
   justify-content: center;
   align-items: center;
