--- a/public/css/respo.css
+++ b/public/css/respo.css
@@ -1,4 +1,13 @@
 @media(max-width:1199px) and (min-width:991px){
+    .about_section .flex_row .img_container .pos{
+        font-size: 100px;
+    }
+    .home .content .why_dubai .black_bg{
+ 
+       
+     grid-template-columns: repeat(2, 1fr);
+     
+    }
     .about_section .flex_row .grid{
         display: grid;
         grid-template-columns: repeat(2,1fr);
@@ -10,6 +19,26 @@
     }
 }
 @media (max-width:599px){
+    .newsletter .flex_col{
+        width:100% !important
+    }
+    .services_col .grid .col.order_ser .service .flex_icon{
+        gap: 0.5rem;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+    }
+   
+    .services_col .grid .col.order_ser .service .flex{
+        padding: 1rem;
+    }
+    .services_col .grid .col.order_ser .service .flex .img_container img {
+        width: 28px;
+    }
+    .services_col .grid .col.order_ser .service .flex .img_container{
+        width:55px;
+        height:55px
+    }
     .contact_page .form_contact_us .form_contact .flex_row{
         flex-direction: column;
     }
@@ -17,13 +46,31 @@
     .blogs_section .container .blogs_swiper .single_blog .img_Container{
         width:320px
     }
-    .home .content .why_dubai .black_bg{
-        display: grid;
-        grid-template-columns: repeat(1,1fr);
-        gap:2rem
-    }
+   
 }
 @media (min-width:768px) and (max-width:990px){
+    .about_section .flex_row{
+        flex-direction: column;
+    }
+    .about_section .flex_row .text_container,
+    .about_section .flex_row .img_container{
+        width:100%
+    }
+    .about_section .flex_row .img_container img{
+        width:400px
+    }
+    .about_section .flex_row .img_container .pos{
+        font-size: 100px;
+        width:100%
+    }
+    .services_col .grid{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .home .content .why_dubai .black_bg{
+
+        grid-template-columns: repeat(2, 1fr);
+        
+       }
     .contact_page .form_contact_us .form_contact .flex_row{
         flex-direction: column;
     }
@@ -36,11 +83,11 @@
     .home .content .flex-col .title, .main_title {
         font-size: 46px;
     }
-    .about_section .flex_row .grid{
+    /* .about_section .flex_row .grid{
         display: grid;
         grid-template-columns: repeat(2,1fr);
         gap:2rem
-    }
+    } */
     .contact_whatsapp .pos.flex
 {
     font-size: 16px;
@@ -56,6 +103,21 @@
     }
 }
 @media (max-width:767px){
+    .contact_whatsapp {
+        border-radius: 24px;
+    }
+    .about_section .flex_row .img_container .pos{
+        font-size: 60px;
+        width:100%
+    }
+    .about_section .flex_row .img_container img{
+        width:300px
+    }
+    .home .content .why_dubai .black_bg{
+        grid-template-columns: repeat(1, 1fr);
+        gap:3rem
+        
+       }
     .contact_page .form_contact_us .form_contact .grid_container .col .input_container input{
         width: 95%;
         margin: 0 2.5%;
@@ -129,6 +191,7 @@
     }
     .about_section .flex_row .text_container .title{
         text-align: center;
+        font-size: 33px;
     }
     .about_section .flex_row .text_container .flex_col,
     .about_section .flex_row .text_container{
@@ -156,9 +219,7 @@
         font-size: 17px;
         font-weight: 600;
     }
-    .home .content .why_dubai .black_bg .col div{
-        font-size: 20px;
-    }
+  
     .banner_swiper .swiper-slide{
         flex-direction: column;
         gap:1.4rem
@@ -167,9 +228,7 @@
     .banner_swiper .text_desc{
         width:100%
     }
-    .banner_swiper .text_desc .title{
-        font-size: 22px;
-    }
+   
     .banner_swiper .text_desc{
         gap:1rem
     }
@@ -178,13 +237,20 @@
     }
 }
 @media (min-width:600px) and (max-width:767px){
-    .home .content .why_dubai .black_bg{
-        display: grid;
-        gap:2rem;
-        grid-template-columns: repeat(2,1fr);
-    }
+   
 }
 @media(max-width:990px){
+    .newsletter .flex_col{
+        width:80%
+    }
+    .banner_swiper .text_desc{
+        width: 86%;
+        margin: 0 auto;
+    }
+    .banner_swiper .text_desc .title{
+        font-size: 35px;
+        
+    }
     .home .content .flex-col .desc{
         font-size: 17px;
     }
