--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1143,16 +1143,108 @@ ul{
 .banner_contact{
   width: 100%;
   height: calc(100vh - 160px);
+  background: linear-gradient(180deg, rgba(32, 40, 45, 0.1) 0%, rgba(255, 255, 255, 0.1) 96.54%);;
   position: relative;
   top:0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.contact_page .banner_contact .one,
+.banner_about .one{
+  width:100px;
+  position: absolute;
+  left: 2%;
+  animation: jump-2 8s 
+linear infinite;
+}
+.contact_page .banner_contact .two,
+.banner_about .two{
+  width:100px;
+  position: absolute;
+  left: 33%;
+  animation: jump-2 6s 
+linear infinite;
+}
+.contact_page .banner_contact .three,
+.banner_about .three{
+  width:100px;
+  position: absolute;
+  left: 79%;
+  top: 53%;
+  animation: jump-2 5s 
+linear infinite;
+}
+.banner_about img,
+.contact_page .banner_contact img{
+  position: absolute;
+}
+@keyframes jump-2{
+  0%{
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+  50%{
+    -webkit-transform: translate3d(0, 30px, 0);
+    transform: translate3d(0, 30px, 0);
+  }
+  100%{
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+}
+
+  
+
+.contact_page .banner_contact .two,
+.banner_about .two{
+  width:80px
+}
+.contact_page .banner_contact .three,
+.banner_about .three{
+  width:230px
+}
+.contact_page .banner_contact .main_title::after,
+.banner_about .main_title::after{
+  width: 100%;
+  height: 100%;
+  font-size: 121px;
+  position: absolute;
+  font-weight: 900;
+  letter-spacing: 0;
+  left: 50%;
+  z-index: -1;
+  top: -5rem;
+  min-width: max-content;
+  color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgba(0, 0, 0, 0.1);
+  line-height: 1;
+  transform: translate(-50%);
+  text-align: center;
+
+}
+.contact_page.business_page .main_title::after{
+  content: "Business" !important;
+
+ 
+
+ 
+}
+.banner_about .main_title::after{
+  content: 'ABOUT US';
+}
+.contact_page .banner_contact .main_title::after{
+  content: 'CONTACT US';
+}
 .banner_about .main_title,
 .contact_page .banner_contact .main_title{
-  color: #fff;
+  color: rgba(0, 0, 0, 0.8);
   z-index: 11;
+  position: relative;
+  width: 80%;
+  text-align: center;
 }
 .about_page .text_desc,
 .contact_page .text_desc{
@@ -1171,7 +1263,7 @@ ul{
   font-size: 19px;
     color: rgba(0, 0, 0, 0.55);
 }
-.banner_about::after,
+/* .banner_about::after,
 .contact_page .banner_contact::after{
   width: 100%;
   height:100%;
@@ -1181,15 +1273,15 @@ ul{
   content: '';
   top:0;
   left: 0;
-}
-.banner_about img,
+} */
+/* .banner_about img,
 .contact_page .banner_contact img{
   position: absolute;
   object-fit: cover;
   height:100%;
   width: 100%;
   
-}
+} */
 .contact_page .form_contact_us .form_contact{
   width: 100%;
   margin-top: 3rem;
@@ -1321,3 +1413,44 @@ ul{
 }
 
 
+.business_page .content_business .grid_container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap:2rem;
+  border: 1px solid #E3E0E6;
+  padding: 1rem 0rem 1rem 1rem;
+  margin-bottom: 3rem;
+}
+.business_page .content_business .button{
+  margin: 3rem 0;
+}
+.business_page .content_business .grid_container .col{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+}
+.business_page .content_business .grid_container .col .title{
+  font-size: 19px;
+    font-weight: 700;
+}
+.business_page .content_business .grid_container .col .icon{
+  width: 100px;
+}
+.business_page .content_business .grid_container .col .desc{
+  color:#5d666f
+}
+.business_page .content_business .grid_container .col .img_container{
+  width: 100%;
+}
+.business_page .content_business .grid_container .col .img_container img{
+  width: 100%;
+}
+.business_page .content_business .grid_container .col .icon img{
+  width: 100%;
+}
+.business_page .content_business .grid_container .flex_col{
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  gap:1rem
+}
