--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1288,9 +1288,29 @@ linear infinite;
 }
 .contact_page .form_contact_us .form_contact .grid_container{
   display: grid;
-  grid-template-columns: repeat(2 ,1fr);
+  grid-template-columns: repeat(1 ,1fr);
   align-items: center;
-  gap:2rem
+  gap:4rem
+}
+.contact_page .form_contact_us .form_contact .grid_container .grid_form .flex_col{
+  display: flex
+;
+    flex-direction: column;
+    gap: 2rem;
+}
+.contact_page .form_contact_us .form_contact .grid_container .grid_form .flex_col textarea{
+  border: none;
+  outline: none;
+  width: calc(100% - 2rem);
+  margin: 0 auto;
+  padding: 1rem;
+  height: 100px;
+}
+.contact_page .form_contact_us .form_contact .grid_container .grid_form{
+  display: grid;
+  grid-template-columns: repeat(3 ,1fr);
+  /* align-items: center; */
+  gap:1rem
 }
 .contact_page .form_contact_us .form_contact .grid_container .col{
   display: flex;
@@ -1333,32 +1353,52 @@ linear infinite;
   padding: 0.8rem 0;
   font-size: 18px;
 }
+textarea{
+  font-size: 18px;
+  color: rgba(0, 0, 0, 0.55);
+}
 .contact_page .form_contact_us .form_contact .flex_row{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap:2rem
+ flex-direction: column;
+ align-items: flex-start;
+  gap:2rem;
+  padding-left: 2rem;
+    padding-top: 2rem;
 
 
+}
+.contact_page .form_contact_us .form_contact .flex_row .call div.gray{
+  padding-bottom: 1rem;
+  opacity: 0.6;
 }
 .contact_page .form_contact_us .form_contact .flex_row .call{
   display: flex
 ;
-    gap: 1rem;
+    gap: 2rem;
     align-items: center;
     color: rgba(0, 0, 0, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 0.7rem;
     justify-content: center;
-    width: calc(100% - 1.4rem);
+   
 
 }
+.flex_img{
+  background-color: #f2f2f2;
+  display: flex;
+justify-content: space-between;
+grid-column: span 2;
+border-radius: 20px;
+}
+.contact_page .form_contact_us .form_contact .img{
+  width: 50%;
+  object-fit: cover;
+  border-radius: 17px
+}
 .contact_page .form_contact_us .form_contact .flex_row .call div{
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
 } 
 .contact_page .form_contact_us .form_contact .flex_row .call img{
-  width: 33px;
+  width: 44px;
   
 } 
 .contact_page .form_contact_us .form_contact .grid_container .col .input_container .error-message{
